--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "crwn-clothing",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zbrushisnotavailable.github.io/clothing-react/",
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "node-sass": "^6.0.0",
     "sass-loader": "^11.1.1"
   },
@@ -36,7 +38,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
